--- a/airflow-core/src/airflow/ui/public/i18n/locales/pt/dag.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/pt/dag.json
@@ -73,16 +73,24 @@
   },
   "overview": {
     "buttons": {
+      "failedRun_many": "Execuções Falhadas",
       "failedRun_one": "Execução Falhada",
       "failedRun_other": "Execuções Falhadas",
+      "failedRun_zero": "Nenhuma execução falhada",
+      "failedTask_many": "Tarefas Falhadas",
       "failedTask_one": "Tarefa Falhada",
       "failedTask_other": "Tarefas Falhadas",
+      "failedTask_zero": "Nenhuma tarefa falhada",
+      "failedTaskInstance_many": "Instâncias de Tarefa Falhadas",
       "failedTaskInstance_one": "Instância de Tarefa Falhada",
-      "failedTaskInstance_other": "Instâncias de Tarefa Falhadas"
+      "failedTaskInstance_other": "Instâncias de Tarefa Falhadas",
+      "failedTaskInstance_zero": "Nenhuma instância de tarefa falhada"
     },
     "charts": {
+      "assetEvent_many": "Eventos de Asset Criados",
       "assetEvent_one": "Evento de Asset Criado",
-      "assetEvent_other": "Eventos de Asset Criados"
+      "assetEvent_other": "Eventos de Asset Criados",
+      "assetEvent_zero": "Nenhum evento de asset criado"
     },
     "failedLogs": {
       "title": "Logs Recentes de Tarefas Falhadas",
@@ -133,8 +141,10 @@
     "code": "Código",
     "details": "Detalhes",
     "logs": "Logs",
+    "mappedTaskInstances_many": "Instâncias de Tarefa [{{count}}]",
     "mappedTaskInstances_one": "Instância de Tarefa [{{count}}]",
     "mappedTaskInstances_other": "Instâncias de Tarefa [{{count}}]",
+    "mappedTaskInstances_zero": "Nenhuma instância de tarefa mapeada",
     "overview": "Visão Geral",
     "renderedTemplates": "Modelos Renderizados",
     "requiredActions": "Ações Necessárias",
