--- a/airflow-core/src/airflow/ui/public/i18n/locales/pt/hitl.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/pt/hitl.json
@@ -6,8 +6,10 @@
       "received": "Revisadas"
     }
   },
+  "requiredAction_many": "Ações Necessárias",
   "requiredAction_one": "Ação Necessária",
   "requiredAction_other": "Ações Necessárias",
+  "requiredAction_zero": "Nenhuma ação necessária",
   "requiredActionState": "Estado da Ação Necessária",
   "response": {
     "error": "Falha na resposta",
