--- a/airflow-core/src/airflow/ui/public/i18n/locales/pt/dag.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/pt/dag.json
@@ -93,6 +93,8 @@
       "assetEvent_zero": "Nenhum evento de asset criado"
     },
     "failedLogs": {
+      "hideLogs": "Ocultar Logs",
+      "showLogs": "Mostrar Logs",
       "title": "Logs Recentes de Tarefas Falhadas",
       "viewFullLogs": "Ver logs completos"
     }
