--- a/airflow-core/src/airflow/ui/public/i18n/locales/it/dashboard.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/it/dashboard.json
@@ -1,7 +1,9 @@
 {
   "favorite": {
-    "favoriteDags_one": "Primo {{count}} Dag preferito",
-    "favoriteDags_other": "Primi {{count}} Dags preferiti",
+    "favoriteDags_many": "{{count}} DAGs preferiti",
+    "favoriteDags_one": "Primo {{count}} DAG preferito",
+    "favoriteDags_other": "Primi {{count}} DAGs preferiti",
+    "favoriteDags_zero": "Nessun DAG preferito",
     "noDagRuns": "Non ci sono ancora DagRun per questo dag.",
     "noFavoriteDags": "Nessun preferito ancora. Clicca sull'icona stella accanto a un Dag nella lista per aggiungerlo ai tuoi preferiti."
   },
@@ -19,8 +21,10 @@
   },
   "history": "Cronologia",
   "importErrors": {
+    "dagImportError_many": "Errori di Importazione DAG",
     "dagImportError_one": "Errore di Importazione DAG",
-    "dagImportError_other": "Errore di Importazione DAG",
+    "dagImportError_other": "Errori di Importazione DAG",
+    "dagImportError_zero": "Nessun errore di importazione DAG",
     "searchByFile": "Cerca per file",
     "timestamp": "Timestamp"
   },
