--- a/airflow-core/src/airflow/ui/public/i18n/locales/de/common.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/de/common.json
@@ -99,6 +99,7 @@
     "any": "Jeder",
     "or": "ODER"
   },
+  "filter": "Filter",
   "filters": {
     "dagDisplayNamePlaceholder": "Nach Dag filtern",
     "keyPlaceholder": "Nach Task Kommunikation (XCom) Schlüssel filtern",
@@ -151,6 +152,7 @@
     "running": "Laufende",
     "scheduled": "Geplant"
   },
+  "reset": "Zurücksetzen",
   "runId": "Lauf Id",
   "runTypes": {
     "asset_triggered": "Durch Datenset (Asset) ausgelöst",
