--- a/airflow-core/src/airflow/ui/public/i18n/locales/he/common.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/he/common.json
@@ -105,6 +105,7 @@
     "any": "כלשהו",
     "or": "או"
   },
+  "filter": "מסנן",
   "filters": {
     "dagDisplayNamePlaceholder": "סנן לפי Dag",
     "keyPlaceholder": "סנן לפי מפתח XCom",
@@ -158,6 +159,7 @@
     "running": "בביצוע",
     "scheduled": "מתוזמן"
   },
+  "reset": "אתחל",
   "runId": "מזהה ריצה",
   "runTypes": {
     "asset_triggered": "הופעל על-ידי נכס",
