--- a/airflow-core/src/airflow/ui/public/i18n/locales/ko/common.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/ko/common.json
@@ -99,6 +99,7 @@
     "any": "모든",
     "or": "또는"
   },
+  "filter": "필터",
   "filters": {
     "dagDisplayNamePlaceholder": "Dag로 필터링",
     "keyPlaceholder": "XCom 키로 필터링",
@@ -150,6 +151,7 @@
     "running": "실행 중",
     "scheduled": "예약됨"
   },
+  "reset": "초기화",
   "runId": "실행 ID",
   "runTypes": {
     "asset_triggered": "에셋 트리거",
