Close German translation gaps for full UI translation 2025-09-10

--- a/airflow-core/src/airflow/ui/public/i18n/locales/de/common.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/de/common.json
@@ -99,6 +99,7 @@
     "any": "Jeder",
     "or": "ODER"
   },
+  "filter": "Filter",
   "filters": {
     "dagDisplayNamePlaceholder": "Nach Dag filtern",
     "keyPlaceholder": "Nach Task Kommunikation (XCom) Schlüssel filtern",
