refactor filter translation keys

--- a/airflow-core/src/airflow/ui/public/i18n/locales/zh-CN/common.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/zh-CN/common.json
@@ -93,6 +93,12 @@
     "or": "或"
   },
   "filter": "筛选",
+  "filters": {
+    "logicalDateFrom": "逻辑日期从",
+    "logicalDateTo": "逻辑日期到",
+    "runAfterFrom": "运行之后从",
+    "runAfterTo": "运行之后到"
+  },
   "logicalDate": "逻辑日期",
   "logout": "退出登录",
   "logoutConfirmation": "确定要退出登录吗？",
