refactor filter translation keys

--- a/airflow-core/src/airflow/ui/public/i18n/locales/ar/common.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/ar/common.json
@@ -125,16 +125,10 @@
   },
   "filter": "فلتر",
   "filters": {
-    "dagDisplayNamePlaceholder": "تصفية حسب الDag",
-    "keyPlaceholder": "تصفية حسب مفتاح XCom",
-    "logicalDateFromPlaceholder": "من التاريخ المنطقي",
-    "logicalDateToPlaceholder": "إلى التاريخ المنطقي",
-    "mapIndexPlaceholder": "تصفية حسب فهرس الخريطة",
-    "runAfterFromPlaceholder": "من تشغيل بعد",
-    "runAfterToPlaceholder": "إلى تشغيل بعد",
-    "runIdPlaceholder": "تصفية حسب معرف التشغيل",
-    "taskIdPlaceholder": "تصفية حسب معرف المهمة",
-    "triggeringUserPlaceholder": "تصفية حسب المستخدم صاحب الاطلاق"
+    "logicalDateFrom": "من التاريخ المنطقي",
+    "logicalDateTo": "إلى التاريخ المنطقي",
+    "runAfterFrom": "من تشغيل بعد",
+    "runAfterTo": "إلى تشغيل بعد"
   },
   "logicalDate": "التاريخ المنطقي",
   "logout": "تسجيل الخروج",
