--- a/airflow-core/src/airflow/ui/public/i18n/locales/pl/common.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/pl/common.json
@@ -113,16 +113,10 @@
   },
   "filter": "Filtr",
   "filters": {
-    "dagDisplayNamePlaceholder": "Filtruj według Daga",
-    "keyPlaceholder": "Filtruj według klucza XCom",
-    "logicalDateFromPlaceholder": "Data logiczna od",
-    "logicalDateToPlaceholder": "Data logiczna do",
-    "mapIndexPlaceholder": "Filtruj według indeksu mapowania",
-    "runAfterFromPlaceholder": "Uruchom po (od)",
-    "runAfterToPlaceholder": "Uruchom po (do)",
-    "runIdPlaceholder": "Filtruj według identyfikatora uruchomienia",
-    "taskIdPlaceholder": "Filtruj według identyfikatora zadania",
-    "triggeringUserPlaceholder": "Filtruj według uruchamiającego użytkownika"
+    "logicalDateFrom": "Data logiczna od",
+    "logicalDateTo": "Data logiczna do",
+    "runAfterFrom": "Uruchom po (od)",
+    "runAfterTo": "Uruchom po (do)"
   },
   "logicalDate": "Data logiczna",
   "logout": "Wyloguj",
