--- a/airflow-core/src/airflow/ui/public/i18n/locales/de/common.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/de/common.json
@@ -101,16 +101,10 @@
   },
   "filter": "Filter",
   "filters": {
-    "dagDisplayNamePlaceholder": "Nach Dag filtern",
-    "keyPlaceholder": "Nach Task Kommunikation (XCom) Schlüssel filtern",
-    "logicalDateFromPlaceholder": "Logisches Datum Von",
-    "logicalDateToPlaceholder": "Logisches Datum Bis",
-    "mapIndexPlaceholder": "Nach Planungs-Index filtern",
-    "runAfterFromPlaceholder": "Gelaufen-nach von filtern",
-    "runAfterToPlaceholder": "Gelaufen-nach bis filtern",
-    "runIdPlaceholder": "Nach Lauf ID filtern",
-    "taskIdPlaceholder": "Nach Task ID filtern",
-    "triggeringUserPlaceholder": "Nach auslösendem Benutzer filtern"
+    "logicalDateFrom": "Logisches Datum Von",
+    "logicalDateTo": "Logisches Datum Bis",
+    "runAfterFrom": "Gelaufen-nach von filtern",
+    "runAfterTo": "Gelaufen-nach bis filtern"
   },
   "logicalDate": "Logisches Datum",
   "logout": "Abmelden",
