--- a/airflow-core/src/airflow/ui/public/i18n/locales/hu/common.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/hu/common.json
@@ -94,15 +94,10 @@
   },
   "filter": "Szűrő",
   "filters": {
-    "dagDisplayNamePlaceholder": "Szűrés Dag szerint",
-    "keyPlaceholder": "Szűrés XCom kulcs szerint",
-    "logicalDateFromPlaceholder": "Logikai dátum -tól",
-    "logicalDateToPlaceholder": "Logikai dátum -ig",
-    "mapIndexPlaceholder": "Szűrés Map Index szerint",
-    "runAfterFromPlaceholder": "Futás ekkortól",
-    "runAfterToPlaceholder": "Futás eddig",
-    "runIdPlaceholder": "Szűrés futás azonosító szerint",
-    "taskIdPlaceholder": "Szűrés feladat azonosító szerint"
+    "logicalDateFrom": "Logikai dátum -tól",
+    "logicalDateTo": "Logikai dátum -ig",
+    "runAfterFrom": "Futás ekkortól",
+    "runAfterTo": "Futás eddig"
   },
   "logicalDate": "Logikai dátum",
   "logout": "Kijelentkezés",
