--- a/airflow-core/src/airflow/ui/public/i18n/locales/nl/common.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/nl/common.json
@@ -100,15 +100,10 @@
   },
   "filter": "Filter",
   "filters": {
-    "dagDisplayNamePlaceholder": "Filter op Dag",
-    "keyPlaceholder": "Filter op XCom sleutel",
-    "logicalDateFromPlaceholder": "Van logische datum",
-    "logicalDateToPlaceholder": "Tot logische datum",
-    "mapIndexPlaceholder": "Filter op Map Index",
-    "runAfterFromPlaceholder": "Van Run na",
-    "runAfterToPlaceholder": "Tot Run na",
-    "runIdPlaceholder": "Filter op Run ID",
-    "taskIdPlaceholder": "Filter op Task ID"
+    "logicalDateFrom": "Van logische datum",
+    "logicalDateTo": "Tot logische datum",
+    "runAfterFrom": "Van Run na",
+    "runAfterTo": "Tot Run na"
   },
   "logicalDate": "Logische datum",
   "logout": "Uitloggen",
