--- a/airflow-core/src/airflow/ui/public/i18n/locales/tr/common.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/tr/common.json
@@ -101,16 +101,10 @@
   },
   "filter": "Filtre",
   "filters": {
-    "dagDisplayNamePlaceholder": "Dag adına göre filtrele",
-    "keyPlaceholder": "XCom anahtarına göre filtrele",
-    "logicalDateFromPlaceholder": "Mantıksal tarih başlangıcı",
-    "logicalDateToPlaceholder": "Mantıksal tarih bitişi",
-    "mapIndexPlaceholder": "Harita indeksine göre filtrele",
-    "runAfterFromPlaceholder": "Şu tarihten sonra çalıştır (başlangıç)",
-    "runAfterToPlaceholder": "Şu tarihten sonra çalıştır (bitiş)",
-    "runIdPlaceholder": "Çalıştırma kimliğine göre filtrele",
-    "taskIdPlaceholder": "Görev kimliğine göre filtrele",
-    "triggeringUserPlaceholder": "Tetikleyen kullanıcıya göre filtrele"
+    "logicalDateFrom": "Mantıksal tarih başlangıcı",
+    "logicalDateTo": "Mantıksal tarih bitişi",
+    "runAfterFrom": "Şu tarihten sonra çalıştır (başlangıç)",
+    "runAfterTo": "Şu tarihten sonra çalıştır (bitiş)"
   },
   "logicalDate": "Mantıksal Tarih",
   "logout": "Çıkış",
