--- a/airflow-core/src/airflow/ui/public/i18n/locales/it/hitl.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/it/hitl.json
@@ -29,6 +29,7 @@
     "approvalRequired": "Approvazione richiesta",
     "choiceReceived": "Scelta ricevuta",
     "choiceRequired": "Scelta richiesta",
+    "noResponseReceived": "Nessuna risposta ricevuta",
     "rejectionReceived": "Rifiuto ricevuto",
     "responseReceived": "Risposta ricevuta",
     "responseRequired": "Risposta richiesta"
