--- a/airflow-core/src/airflow/ui/public/i18n/locales/zh-TW/common.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/zh-TW/common.json
@@ -101,10 +101,10 @@
   },
   "filter": "篩選",
   "filters": {
-    "logicalDateFrom": "邏輯日期從",
-    "logicalDateTo": "邏輯日期到",
-    "runAfterFrom": "運行之後從",
-    "runAfterTo": "運行之後到"
+    "logicalDateFrom": "從邏輯日期",
+    "logicalDateTo": "到邏輯日期",
+    "runAfterFrom": "從運行之後",
+    "runAfterTo": "到運行之後"
   },
   "logicalDate": "邏輯日期",
   "logout": "登出",
