--- a/airflow-core/src/airflow/ui/public/i18n/locales/zh-CN/common.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/zh-CN/common.json
@@ -97,7 +97,7 @@
     "logicalDateFrom": "从逻辑日期",
     "logicalDateTo": "到逻辑日期",
     "runAfterFrom": "从运行之后",
-    "runAfterTo": "到运行之后"
+    "runAfterTo": "到运行之前"
   },
   "logicalDate": "逻辑日期",
   "logout": "退出登录",
