--- a/dev/stats/explore_pr_candidates.ipynb
+++ b/dev/stats/explore_pr_candidates.ipynb
@@ -6,11 +6,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from __future__ import annotations\n",
+    "\n",
     "sys.path.append(\".\")\n",
     "\n",
     "import pickle\n",
-    "import pandas as pd\n",
-    "from get_important_pr_candidates import PrStat"
+    "\n",
+    "import pandas as pd"
    ]
   },
   {
