--- a/providers/amazon/tests/unit/amazon/aws/operators/test_notebook.ipynb
+++ b/providers/amazon/tests/unit/amazon/aws/operators/test_notebook.ipynb
@@ -22,7 +22,8 @@
     "# \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY\n",
     "# KIND, either express or implied.  See the License for the\n",
     "# specific language governing permissions and limitations\n",
-    "# under the License."
+    "# under the License.\n",
+    "from __future__ import annotations"
    ]
   },
   {
